--- a/EscapeRoom.cabal
+++ b/EscapeRoom.cabal
@@ -26,7 +26,7 @@ source-repository head
 library
   exposed-modules:
       Engine.Game
-      Engine.ItemParser
+      Engine.Item
       Lib
   other-modules:
       Paths_EscapeRoom
