--- a/EscapeRoom.cabal
+++ b/EscapeRoom.cabal
@@ -61,12 +61,14 @@ test-suite EscapeRoom-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
+      ItemsTest
       Paths_EscapeRoom
   hs-source-dirs:
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       EscapeRoom
+    , QuickCheck
     , base >=4.7 && <5
     , containers
     , mtl
