--- a/EscapeRoom.cabal
+++ b/EscapeRoom.cabal
@@ -62,6 +62,7 @@ test-suite EscapeRoom-test
   main-is: Spec.hs
   other-modules:
       ItemsTest
+      ParserTest
       Paths_EscapeRoom
   hs-source-dirs:
       test
