--- a/EscapeRoom.cabal
+++ b/EscapeRoom.cabal
@@ -61,7 +61,8 @@ test-suite EscapeRoom-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      ItemsTest
+      GameTest
+      ItemTest
       ParserTest
       Paths_EscapeRoom
   hs-source-dirs:
